# MLOps_project

./: ._README.md  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  infer.py  pyproject.toml  train.py
.dvc/: config
configs/: data.yaml  logging.yaml  model.yaml  train.yaml
pneumonia_detector/: .gitignore  data.dvc  data_module.py  lightning_logs.dvc  model_module.py  models.dvc  train.py
