[tool.poetry]
name = "pneumonia-detector"
version = "0.1.0"
description = "Проект для автоматической диагностики пневмонии"
authors = ["Иван Петров <ivan.petrov@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "1.12.1"
torchvision = "0.13.1"
pytorch-lightning = "1.7.7"
albumentations = "1.2.0"
numpy = "1.23.0"
pandas = "1.4.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
